# RegNav_AI

./: README.md  Taskfile.yaml
apps/server/: .gitignore  pyproject.toml  pyrightconfig.json  requirements.txt
apps/server/src/server/: main.py
apps/server/src/server/application/: app.py
apps/server/src/server/config/: config.py
apps/server/src/server/controllers/: __init__.py  agent.py  document.py
apps/server/src/server/lib/: __init__.py  prompt_builder.py  types.py  upload.py  vector_store.py
apps/server/src/server/routes/: __init__.py  chat.py  document.py  health.py
apps/server/src/server/services/: __init__.py  document_processor.py  regulatory_agent.py
apps/server/src/server/services/prompts/: __init__.py  regulatory_agent.yaml
apps/server/src/server/utils/: __init__.py  api_error.py  api_response.py
apps/web/: next.config.ts  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/chat/: route.ts
apps/web/src/app/api/upload/: route.ts
apps/web/src/app/chat/: page.tsx
apps/web/src/app/document-upload/: page.tsx
apps/web/src/components/: ChatWindow.tsx
apps/web/src/components/common/: documentUploader.tsx  index.ts  toast.ts
apps/web/src/components/lib/: utils.ts
apps/web/src/hooks/: index.ts  useState.ts
apps/web/src/lib/: api.ts  index.ts
infra/compose/: docker-compose.yaml
