[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "server"
version = "0.1.0"
description = "FastAPI backend"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "python-multipart",
    "langchain",
    "langchain-qdrant",
    "qdrant-client",
    "langchain-openai",
    "langchain-community",
    "pypdf"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
venvPath="."
venv=".venv"
